--- a/OrderApp/OrderApi/OrderApi.csproj
+++ b/OrderApp/OrderApi/OrderApi.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Order.Model\Order.Model.csproj" />
+  </ItemGroup>
+
 
 </Project>
