--- a/OrderApp/OrderGenerator/Properties/launchSettings.json
+++ b/OrderApp/OrderGenerator/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "ordergenerator/5",
+      "launchUrl": "generateorders/5",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "OrderGenerator": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "ordergenerator/5",
+      "launchUrl": "generateorders/5",
       "applicationUrl": "http://localhost:8180",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
