--- a/OrderApp/LoyaltyService/Dockerfile
+++ b/OrderApp/LoyaltyService/Dockerfile
@@ -7,17 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["OrderGenerator/OrderGenerator.csproj", "OrderGenerator/"]
-COPY ["Order.Model/Order.Model.csproj", "Order.Model/"]
-RUN dotnet restore "OrderGenerator/OrderGenerator.csproj"
+COPY ["LoyaltyService/LoyaltyService.csproj", "LoyaltyService/"]
+RUN dotnet restore "LoyaltyService/LoyaltyService.csproj"
 COPY . .
-WORKDIR "/src/OrderGenerator"
-RUN dotnet build "OrderGenerator.csproj" -c Release -o /app/build
+WORKDIR "/src/LoyaltyService"
+RUN dotnet build "LoyaltyService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "OrderGenerator.csproj" -c Release -o /app/publish
+RUN dotnet publish "LoyaltyService.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "OrderGenerator.dll"]
+ENTRYPOINT ["dotnet", "LoyaltyService.dll"]
