--- a/OrderApp/LoyaltyService/Properties/launchSettings.json
+++ b/OrderApp/LoyaltyService/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60439",
-      "sslPort": 44303
+      "applicationUrl": "http://localhost:59625",
+      "sslPort": 44345
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -12,24 +12,24 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "generateorders/5",
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "OrderGenerator": {
+    "LoyaltyService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "generateorders/5",
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:8180"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/generateorders/5",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "publishAllPorts": true,
       "useSSL": true
     }
