--- a/OrderApp/ShippingCostsService/ShippingCostsService.csproj
+++ b/OrderApp/ShippingCostsService/ShippingCostsService.csproj
@@ -1,20 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e697b665-9547-432f-959d-a05e7828dae4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\OrderApi</DockerfileContext>
-    <UserSecretsId>6ccc6c2a-9f9d-4980-ad26-afcb18b7affb</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Order.Model\Order.Model.csproj" />
   </ItemGroup>
 
 
