--- a/OrderApp/LoyaltyService/LoyaltyService.csproj
+++ b/OrderApp/LoyaltyService/LoyaltyService.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Order.Model\Order.Model.csproj" />
   </ItemGroup>
 
 
