deployment of distributed tracing sample

--- a/deploy/loyaltyservice.yml
+++ b/deploy/loyaltyservice.yml
@@ -9,7 +9,7 @@ spec:
     app: loyaltyservice
   ports:
   - protocol: TCP
-    port: 80
+    port: 8280
     targetPort: 80
   type: LoadBalancer
 
@@ -33,6 +33,7 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/id: "loyaltyservice"
         dapr.io/port: "80"
+        dapr.io/config: "tracing"
     spec:
       containers:
       - name: loyaltyservice
