--- a/deploy/orderapi.yml
+++ b/deploy/orderapi.yml
@@ -9,7 +9,7 @@ spec:
     app: orderapi
   ports:
   - protocol: TCP
-    port: 80
+    port: 8180
     targetPort: 80
   type: LoadBalancer
 
@@ -33,6 +33,7 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/id: "orderapi"
         dapr.io/port: "80"
+        dapr.io/config: "tracing"
     spec:
       containers:
       - name: orderapi
