--- a/deploy/redis.yml
+++ b/deploy/redis.yml
@@ -6,6 +6,6 @@ spec:
   type: state.redis
   metadata:
   - name: redisHost
-    value: redis-master:6379
+    value: redis-master.default.svc.cluster.local:6379
   - name: redisPassword
     value: Vzu2G30B0Z
