--- a/deploy/dapr-demoapp/dapr/dapr-tracing-exporterzipkin.yml
+++ b/deploy/dapr-demoapp/dapr/dapr-tracing-exporterzipkin.yml
@@ -8,4 +8,4 @@ spec:
   - name: enabled
     value: "true"
   - name: exporterAddress
-    value: "http://zipkin:9411/api/v2/spans"
+    value: "http://zipkin.tracing-demo.svc.cluster.local:9411/api/v2/spans"
