--- a/deploy/tracing-demo/zipkin-deployment.yml
+++ b/deploy/tracing-demo/zipkin-deployment.yml
@@ -13,7 +13,7 @@ spec:
     name: http
     port: 9411
     targetPort: 9411
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
