--- a/deploy/dapr-demoapp/orderapi.yml
+++ b/deploy/dapr-demoapp/orderapi.yml
@@ -34,6 +34,7 @@ spec:
         dapr.io/id: "orderapi"
         dapr.io/port: "80"
         dapr.io/config: "tracing"
+        dapr.io/log-level: "debug"
     spec:
       containers:
       - name: orderapi
